--- a/src/container/Experience/Experience.scss
+++ b/src/container/Experience/Experience.scss
@@ -172,3 +172,43 @@
       line-height: 2 !important;
     }
   }
+
+  .experience-resume-button-wrap {
+    margin: auto;
+
+    .experience-resume-card {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+  
+      margin: 3rem 0;
+      padding: 1rem;
+      border-radius: 10px;
+      border-color: var(--secondary-color);
+      cursor: pointer;
+      background-color: var(--secondary-color);
+  
+      transition: all 0.3s ease-in-out;
+  
+      @media screen and (max-width: 450px) {
+        min-width: 100px;
+      }
+  
+      p {
+        font-weight: 500;
+      }
+      a {
+        text-decoration: none;
+        font-weight: 500;
+      }
+      &:hover {
+        box-shadow: 0 0 25px #fef4f5;
+      }
+  
+      @media screen and (max-width: 450px) {
+        width: 100%;
+      }
+    }
+  }
+  
